--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -25,14 +25,25 @@ menu {
 .page-content {
 	position: absolute;
 	width: 100%;
+	box-sizing: border-box;
+}
+
+.page-subcontent {
+	position: absolute;
+	right: 0;
+	display: flex;
+	justify-content: flex-end;
+	text-align: right;
+	transform: translateX(100%);
+	transition: all 0.5s ease-out;
+
+	&.on {
+		transform: translateX(0%);	
+	}
 }
 
 .home {
 	display: flex;
 	flex-direction: column;
 	gap: calc(3 * var(--padding-standard));
-}
-
-.career-timeline {
-	transform: translateX(85%);
 }
