--- a/src/app/Layout.css
+++ b/src/app/Layout.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	height: 100%;
 	gap: calc(2 * var(--padding-standard));
-	padding: calc(2 * var(--padding-standard));
+	padding: calc(3 * var(--padding-standard));
 	box-sizing: border-box;
 	overflow: hidden;
 }
@@ -15,8 +15,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 100%;
+	width: calc(100% - (6 * var(--padding-standard)));
 	height: 100%;
-	padding: 0 var(--padding-standard);
 	overflow: hidden;
 }
