--- a/src/app/BackButton.css
+++ b/src/app/BackButton.css
@@ -4,7 +4,7 @@ a.back-button {
 	left: 0;
 	font-size: 1.5em;
 	font-weight: bold;
-	color: #000;
+	color: var(--colour-light);
 	text-decoration: none;
 
 	&:hover {
