--- a/src/app/Layout.css
+++ b/src/app/Layout.css
@@ -19,3 +19,14 @@
 	height: 100%;
 	overflow: hidden;
 }
+
+.noise-bg {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url('../assets/bg.noise.gif');
+	mix-blend-mode: hard-light;
+	opacity: 0.075;
+}
