--- a/src/app/CareerTimeline.css
+++ b/src/app/CareerTimeline.css
@@ -1,7 +1,12 @@
+.career-timeline {
+	position: relative;
+	margin-bottom: calc(6 * var(--padding-standard));
+}
+
 .vertical-rule {
 	position: absolute;
 	left: calc(5 * var(--padding-standard));
     width: 2px;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);;
+    background-color: rgba(255, 255, 255, 0.5);
 }
