--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -1,20 +1,17 @@
-.intro {
-	display: block;
-	width: 450px;
-	font-size: 2.5em;
-}
-
 menu {
 	display: flex;
 	flex-direction: column;
 	gap: var(--padding-standard);
 	padding: 0;
+	margin-bottom: 0;
+	font-style: italic;
+	color: #aaa;
 
 	& a {
 		text-decoration: none;
 		font-size: 1em;
-		color: var(--colour-dark);
-		font-weight: bold;
+		color: var(--colour-light);
+		font-style: normal;
 
 		&:hover {
 			text-decoration: underline;
@@ -22,28 +19,89 @@ menu {
 	}
 }
 
-.page-content {
-	position: absolute;
-	width: 100%;
+.intro {
+	display: block;
+	width: 650px;
+	font-size: 2.5em;
+}
+
+section {
+	position: relative;
+	display: flex;
+	width: calc(100% + calc(6 * var(--padding-standard)));
+	margin-left: calc(-3 * var(--padding-standard));
+	padding: calc(16 * var(--padding-standard)) calc(3 * var(--padding-standard));
 	box-sizing: border-box;
-}
 
-.page-subcontent {
-	position: absolute;
-	right: 0;
-	display: flex;
-	justify-content: flex-end;
-	text-align: right;
-	transform: translateX(100%);
-	transition: all 0.5s ease-out;
-
-	&.on {
-		transform: translateX(0%);	
+	&:nth-child(2n) {
+		background-color: rgba(0, 0, 0, 0.2);
 	}
-}
 
-.home {
-	display: flex;
-	flex-direction: column;
-	gap: calc(3 * var(--padding-standard));
+	&:nth-child(2n):not(.home):before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		display: block;
+		width: 100%;
+		height: 100%;
+		background-image: url('../assets/bg.noise.gif');
+		mix-blend-mode: hard-light;
+		opacity: 0.075;
+	}
+
+	& header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		position: absolute;
+		top: 50%;
+		left: var(--padding-standard);
+		transform: translateY(-50%);
+		font-size: 2em;
+	}
+
+	&.home {
+		max-width: 1000px;
+		gap: calc(6 * var(--padding-standard));
+		align-items: flex-end;
+		justify-content: space-between;
+		margin: auto;
+	}
+
+	&:not(.home) {
+		justify-content: center;
+	}
+
+	&.demo-flutter {
+		gap: calc(10 * var(--padding-standard));
+		flex-direction: column;
+	}
+
+	& .menu {
+		text-align: right;
+	}
+
+	&.demo-react {
+		display: flex;
+		gap: var(--padding-standard);
+	}
+
+	&.demo-visualisations {
+		flex-direction: column;
+		align-items: center;
+		gap: calc(2 * var(--padding-standard));
+
+		& .snake-visualisation,
+		& .exerciser-visualisation {
+			width: 100%;
+			max-width: 1200px;
+			aspect-ratio: 4/3;
+			border-radius: var(--padding-standard);
+		}
+
+		@media (max-width: 1500px) {
+			padding-left: 100px;
+		}
+	}
 }
