--- a/src/app/Layout.css
+++ b/src/app/Layout.css
@@ -4,20 +4,16 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	gap: calc(2 * var(--padding-standard));
-	padding: calc(3 * var(--padding-standard));
+	padding: var(--padding-site);
 	box-sizing: border-box;
-	overflow: hidden;
 }
 
 .content {
-	position: absolute;
+	position: relative;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	width: calc(100% - (6 * var(--padding-standard)));
-	height: 100%;
-	overflow: hidden;
+	gap: calc(4 * var(--padding-standard));
+	width: 100%;
 }
 
 .noise-bg {
@@ -26,7 +22,5 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url('../assets/bg.noise.gif');
-	mix-blend-mode: hard-light;
-	opacity: 0.075;
+	
 }
